--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,14 @@
     <string name="app_name">Calculadora1</string>
     <string-array name="operacionesbasicas">
         <item>Suma</item>
-        <item>resta</item>
-        <item>multiplicacion</item>
-        <item>division</item>
-        <item>factorial</item>
+        <item>Resta</item>
+        <item>Multiplicacion</item>
+        <item>Division</item>
+        <item>Factorial</item>
+        <item>Porcentaje</item>
+        <item>Exponenciacion</item>
+        <item>Raiz</item>
+        <item>Modulo(resto)</item>
+        <item>Mayor de 2</item>
     </string-array>
 </resources>
