TIENDA DE PRODUCTOS - PARTE DE JOSE ROBERTO

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,3 @@
 <resources>
-    <string name="app_name">Conversor de Unidades</string>
-    <string-array name="conversorArea">
-        <item>Pie Cuadrado</item>
-        <item>Vara Cuadrada</item>
-        <item>Yarda Cuadrada</item>
-        <item>Metro Cuadrado</item>
-        <item>Tareas</item>
-        <item>Manzana</item>
-        <item>Hectárea</item>
-    </string-array>
+    <string name="app_name">Tienda de productos</string>
 </resources>
